--- a/ios-test-harness/ios-test-harness.entitlements
+++ b/ios-test-harness/ios-test-harness.entitlements
@@ -6,5 +6,9 @@
 	<array/>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.brotsky.test-harness</string>
+	</array>
 </dict>
 </plist>
